------------------------------------------------------------ revno: 54 committer: Steven Schlansker <stevenschlansker@gmail.com> branch nick: gamesman-java timestamp: Tue 2008-12-02 01:53:39 -0800 message:   Changed URL usage to URI; require use of gfdp:// URI
git-svn-id: https://gamescrafters.svn.sourceforge.net/svnroot/gamescrafters/GamesmanJava@3806 a668be5d-ef11-cb4c-8bfd-e08cbb24f2ba